# ChangeLog for media-libs/libiec61883
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libiec61883/ChangeLog,v 1.11 2006/07/08 08:18:35 corsair Exp $

  08 Jul 2006; Markus Rothe <corsair@gentoo.org>
  libiec61883-1.0.0-r1.ebuild:
  Stable on ppc64

  08 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  libiec61883-1.0.0-r1.ebuild:
  Added to ~ppc64.

  23 May 2006; Doug Goldstein <cardoe@gentoo.org>
  libiec61883-1.0.0-r1.ebuild:
  Marking stable per bug #123066

  08 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libiec61883-1.0.0-r1.ebuild:
  ppc stable, bug #127811

  08 Apr 2006; Simon Stelling <blubb@gentoo.org>
  libiec61883-1.0.0-r1.ebuild:
  stable on amd64

  22 Feb 2006; Chris White <chriswhite@gentoo.org>
  libiec61883-1.0.0-r1.ebuild:
  Removed redundant src_compile lines for bug #123621.

  22 Feb 2006; Chris White <chriswhite@gentoo.org>
  -libiec61883-1.0.0.ebuild:
  Removed older versions.

*libiec61883-1.0.0-r1 (03 Sep 2005)

  03 Sep 2005; Chris White <chriswhite@gentoo.org>
  +libiec61883-1.0.0-r1.ebuild:
  Added an -r1 revbump for bug #94642.  Added examples use flag to IUSE.

  31 May 2005; David Holm <dholm@gentoo.org> libiec61883-1.0.0.ebuild:
  Added to ~ppc.

  30 May 2005; Doug Goldstein <cardoe@gentoo.org> libiec61883-1.0.0.ebuild:
  verified it comes on amd64... that's it... need it for QA/repoman

*libiec61883-1.0.0 (30 May 2005)

  30 May 2005; Chris White <chriswhite@gentoo.org> +metadata.xml,
  +libiec61883-1.0.0.ebuild:
  Intial import into the tree. This addresses bug #89799. Thanks to Simon Koch
  for the ebuild.
