@@ -1,12 +1,17 @@
 DIST libiec61883-1.0.0.tar.gz 348261 RMD160 3abf2ad754273e3d9eb9e3fa872a2bfdfd53fd18 SHA1 2791953765d4759dab27a5cc3617fe2ea2a85ca7 SHA256 51bf1e72a68f5af248f9aa1691955e09901356bcd9ef304d9e874b5cf4db4c95
+DIST libiec61883-1.1.0.tar.gz 366682 RMD160 79865282c9958e62fa28bc6eb54d1d9fdf8e5f56 SHA1 2e3caab26ea8ea3d202329303b3f4364558b22cc SHA256 78f6c7ca80ff622f2b0b3691f715d84bb94a00f5f60560cca7989abb8e62c025
 EBUILD libiec61883-1.0.0-r1.ebuild 1051 RMD160 e85adb10cff030e25c174314fa0a9b1b34d5961f SHA1 3685f1542ce0aeb674c19331eb9d387fc6000077 SHA256 1091558b95a1c9ef709d9c805106553ceec429740d7eddf874295743b13de3a6
 MD5 e2f67792dd47e2ee1b303bc80127c9f4 libiec61883-1.0.0-r1.ebuild 1051
 RMD160 e85adb10cff030e25c174314fa0a9b1b34d5961f libiec61883-1.0.0-r1.ebuild 1051
 SHA256 1091558b95a1c9ef709d9c805106553ceec429740d7eddf874295743b13de3a6 libiec61883-1.0.0-r1.ebuild 1051
-MISC ChangeLog 1654 RMD160 4b6df01184243698f0163a35880a0859aa45c73d SHA1 33eccb77dcc893077260cfd5a989a22118c39d16 SHA256 f1bd7fb752305f15852049fc5a53967acb3be3a99f9760c92ca179c86cb72db4
-MD5 f87d9d3645cf74e3c7ed8c2effd7416a ChangeLog 1654
-RMD160 4b6df01184243698f0163a35880a0859aa45c73d ChangeLog 1654
-SHA256 f1bd7fb752305f15852049fc5a53967acb3be3a99f9760c92ca179c86cb72db4 ChangeLog 1654
+EBUILD libiec61883-1.1.0.ebuild 1052 RMD160 d868397cb5b8f666e35499d718d7d3a315ea2232 SHA1 d1d1261eb76471339da64a4558481405ef175567 SHA256 c01fb17ef58edcd22986bcbf581253cc4499db89558aec875d7614a7485f7377
+MD5 1ccc7177c1dd6eb7ea659f3bd60d59b2 libiec61883-1.1.0.ebuild 1052
+RMD160 d868397cb5b8f666e35499d718d7d3a315ea2232 libiec61883-1.1.0.ebuild 1052
+SHA256 c01fb17ef58edcd22986bcbf581253cc4499db89558aec875d7614a7485f7377 libiec61883-1.1.0.ebuild 1052
+MISC ChangeLog 1833 RMD160 f1264f0666f015f75d679ff055ecea82da539715 SHA1 d82d4a85f1b621a240b141af923a0e086f3bca16 SHA256 263821f4a3dedcf6a69d0a47ef5101f893876e91b6886af3e9b7fe19e5ea210b
+MD5 9c8e7eff8302ab4b459917de6bce7435 ChangeLog 1833
+RMD160 f1264f0666f015f75d679ff055ecea82da539715 ChangeLog 1833
+SHA256 263821f4a3dedcf6a69d0a47ef5101f893876e91b6886af3e9b7fe19e5ea210b ChangeLog 1833
 MISC metadata.xml 526 RMD160 55eb99f466f41850ba890756412cd2d391322105 SHA1 1c7caecbafc7f9944f98077da37a07c308be3299 SHA256 cc90bd2607a4f7d7c3ca7555196013062ce3a1723f74512edacbadc87a435fc1
 MD5 71a61d1dff4ca5190061f3c9393d483a metadata.xml 526
 RMD160 55eb99f466f41850ba890756412cd2d391322105 metadata.xml 526
@@ -14,3 +19,6 @@ SHA256 cc90bd2607a4f7d7c3ca7555196013062ce3a1723f74512edacbadc87a435fc1 metadata
 MD5 f360b8243d79c632141c1a43938313ff files/digest-libiec61883-1.0.0-r1 253
 RMD160 2a7e8eb887db9a80a6787c09045d87ccb759982a files/digest-libiec61883-1.0.0-r1 253
 SHA256 779bb6d7c0a25baab39c23bb9f294b561becfccec91da67baa0ef604a093e1b3 files/digest-libiec61883-1.0.0-r1 253
+MD5 f6acf401a0c05dbf2fe27203edd0df34 files/digest-libiec61883-1.1.0 253
+RMD160 fc3f1f43cbbf97e5264e76f8c67b8614c31d757a files/digest-libiec61883-1.1.0 253
+SHA256 4957fc59349dc07740c0734bfeedab942645805569e75947285a4adfa560bb60 files/digest-libiec61883-1.1.0 253
