@@ -1,0 +1,3 @@
+MD5 08f46840912ae2032499186228842a32 libiec61883-1.1.0.tar.gz 366682
+RMD160 79865282c9958e62fa28bc6eb54d1d9fdf8e5f56 libiec61883-1.1.0.tar.gz 366682
+SHA256 78f6c7ca80ff622f2b0b3691f715d84bb94a00f5f60560cca7989abb8e62c025 libiec61883-1.1.0.tar.gz 366682
