@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libiec61883
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libiec61883/ChangeLog,v 1.11 2006/07/08 08:18:35 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libiec61883/ChangeLog,v 1.12 2006/09/25 11:35:37 calchan Exp $
+
+*libiec61883-1.1.0 (25 Sep 2006)
+
+  25 Sep 2006; Denis Dupeyron <calchan@gentoo.org>
+  +libiec61883-1.1.0.ebuild:
+  Revision bump, thanks to Christian Gmeiner (see bug #148987).
 
   08 Jul 2006; Markus Rothe <corsair@gentoo.org>
   libiec61883-1.0.0-r1.ebuild:
